# computer_algebra

./: README.md
CAS/: README.MD  cantor_zassenhauz.ipynb  cantor_zassenhauz.sage
cantor_zassenhauz/: CMakeLists.txt  README.md  cantor_zassenhaus.cpp  cantor_zassenhaus.h  main.cpp  test.cpp  test.h
